--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.heading{
+    font-size: 50px;
+    font-family: sans-serif;
+    font-weight: 100;
+    text-align: center;
+    margin-top: 70px;
+    margin-bottom: 20px;
+}
 .container {
   text-align: center;
   height: 100vh;
@@ -19,12 +28,12 @@
   border-radius: 10px;
   padding: 10px;
   border: 2px solid black;
-  background-color: white;
-}
+    background-color: white;
+}   
 
 .input-city {
   height: 40px;
-  width: 80%;
+  width: 40%;
   border: none;
   font-size: 30px;
   border-radius: 10px;
@@ -38,24 +47,22 @@
 .weather-box {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 40%;
   margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
   border-radius: 10px;
-  padding: 10px;
   border: 2px solid black;
   background-color: white;
 }
 
 .temp {
-  font-size: 70px;
+  font-size: 50px;
   font-family: sans-serif;
   font-weight: 100;
 }
 
 .weather{
-    font-size: 30px;
+    font-size: 50px;
     font-family: sans-serif;
     font-weight: 100;
 }
