--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,29 +11,24 @@
     text-align: center;
     margin-top: 70px;
     margin-bottom: 20px;
-}
-.container {
-  text-align: center;
-  height: 100vh;
-  width: 100%;
+    text-decoration-style: wavy;
 }
 
 .search-box {
   display: flex;
   justify-content: center;
-  width: 40%;
   margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 20px;
   border-radius: 10px;
   padding: 10px;
-  border: 2px solid black;
-    background-color: white;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  background-color: white;
 }   
 
 .input-city {
   height: 40px;
-  width: 40%;
+  width: 35%;
   border: none;
   font-size: 30px;
   border-radius: 10px;
@@ -48,21 +43,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40%;
   margin: 0 auto;
   border-radius: 10px;
-  border: 2px solid black;
   background-color: white;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .temp {
-  font-size: 50px;
+  font-size: 3rem;
   font-family: sans-serif;
   font-weight: 100;
 }
 
 .weather{
-    font-size: 50px;
+    font-size: 3rem;
     font-family: sans-serif;
     font-weight: 100;
 }
